--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,24 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  box-sizing: border-box;
+  /* background: radial-gradient(
+    circle at -4% -12.9%,
+    rgb(74, 98, 110) 0.3%,
+    rgb(30, 33, 48) 90.2%
+  ); */
+  /* color: white !important; */
+  background-attachment: fixed !important;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 118, 186, 0.7),
+    rgba(66, 194, 244, 0.7)
+  );
 }
 
 * {
@@ -30,13 +27,24 @@ body {
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.commentWrapper {
+  display: flex;
+  margin-bottom: 22px;
+  height: 100vh;
+  padding: 22px 33px;
+  flex-direction: column;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.frosted_glass {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 15px;
+  padding: 30px;
+  max-width: 400px;
+  text-align: center;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 5px 3px rgb(150, 143, 143);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 0px !important;
+  outline: none;
 }
