--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@ body {
   max-width: 100vw;
   height: 100vh;
   box-sizing: border-box;
+  /* overflow: hidden; */
   /* background: radial-gradient(
     circle at -4% -12.9%,
     rgb(74, 98, 110) 0.3%,
